# md-madou-kr-patcher

./: .gitignore  Cargo.toml  README.md
apps/madou_kr/: Cargo.toml
apps/madou_kr/src/: align.rs  extract.rs  ips.rs  lib.rs  main.rs  rom.rs  translation.rs
apps/madou_kr/src/bps/: apply.rs  create.rs  mod.rs  vli.rs
apps/madou_kr/src/check/: ctrl_codes.rs  mod.rs  overflow.rs
