[package]
name = "madou_kr"
version = "0.1.0"
edition = "2024"
description = "Madou Monogatari I (Mega Drive) Korean patch tool"

[dependencies]
clap = { version = "4", features = ["derive"] }
crc32fast = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdue = "0.9"
regex-lite = "0.1"
